_generated-doc/2.7/config/quarkus-restclient-config-rest-client-logging-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-restclient-config-rest-client-logging-config_configuration]]link:#quarkus-restclient-config-rest-client-logging-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-restclient-config-rest-client-logging-config_quarkus.rest-client.logging.scope]]`link:#quarkus-restclient-config-rest-client-logging-config_quarkus.rest-client.logging.scope[quarkus.rest-client.logging.scope]`

[.description]
--
Scope of logging for the client. 
 WARNING: beware of logging sensitive data 
 The possible values are:  
 - `request-response` - enables logging request and responses, including redirect responses 
 - `all` - enables logging requests and responses and lower-level logging 
 - `none` - no additional logging  This property is applicable to reactive REST clients only.
--|string 
|


a| [[quarkus-restclient-config-rest-client-logging-config_quarkus.rest-client.logging.body-limit]]`link:#quarkus-restclient-config-rest-client-logging-config_quarkus.rest-client.logging.body-limit[quarkus.rest-client.logging.body-limit]`

[.description]
--
How many characters of the body should be logged. Message body can be large and can easily pollute the logs. By default, set to 100. This property is applicable to reactive REST clients only.
--|int 
|`100`

|===