_generated-doc/3.0/config/quarkus-restclient-config-rest-client-logging-config.adoc

:summaryTableId: quarkus-restclient-config-rest-client-logging-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-restclient-config-rest-client-logging-config_configuration]]link:#quarkus-restclient-config-rest-client-logging-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-restclient-config-rest-client-logging-config_quarkus.rest-client.logging.scope]]`link:#quarkus-restclient-config-rest-client-logging-config_quarkus.rest-client.logging.scope[quarkus.rest-client.logging.scope]`

[.description]
--
Scope of logging for the client. 
WARNING: beware of logging sensitive data 
The possible values are:  
 - `request-response` - enables logging request and responses, including redirect responses 
 - `all` - enables logging requests and responses and lower-level logging 
 - `none` - no additional logging  This property is applicable to reactive REST clients only.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_LOGGING_SCOPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_LOGGING_SCOPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-rest-client-logging-config_quarkus.rest-client.logging.body-limit]]`link:#quarkus-restclient-config-rest-client-logging-config_quarkus.rest-client.logging.body-limit[quarkus.rest-client.logging.body-limit]`

[.description]
--
How many characters of the body should be logged. Message body can be large and can easily pollute the logs. By default, set to 100. This property is applicable to reactive REST clients only.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_LOGGING_BODY_LIMIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_LOGGING_BODY_LIMIT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`100`

|===